--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,12 @@
-.page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
-
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
-}
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-}
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
+@import url(base/fonts.css);
+@import url(vendors/normalize.css);
+@import url(base/global.css);
+@import url(layout/header.css);
+@import url(components/logo.css);
+@import url(layout/description.css);
+@import url(components/two-columns.css);
+@import url(layout/digits.css);
+@import url(components/table.css);
+@import url(layout/feynman.css);
+@import url(layout/kaufman.css);
+@import url(layout/footer.css);
