correct html and css errors, add img for social icons, correct html classes

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,8 @@
 
 .header__title {
   width: 730px;
-  margin: auto 0;
+  margin: 0;
+  align-self: center;
   font-size: 102px;
   font-weight: 700;
   line-height: 96px;
@@ -118,17 +119,17 @@
 
 .two-columns__paragraph {
   margin: 0;
+  margin-top: 30px;
   font-size: 24px;
   font-weight: 400;
   line-height: 34px;
 }
 
-.two-columns__span-accent {
-  display: block;
-  padding: 30px 0;
+.two-columns__paragraph:first-child {
+  margin-top: 0;
 }
 
-.two-columns__strong {
+.two-columns__span-accent {
   font-weight: 700;
 }
 
@@ -206,7 +207,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 890px;
+  min-height: 890px;
   padding-top: 100px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
@@ -296,16 +297,19 @@
   padding-bottom: 40px;
 }
 
-.footer__column_content_copyright {
-  flex-basis: 711px;
-  align-self: stretch;
+.footer__column {
   display: flex;
   flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
   justify-content: space-between;
 }
 
 .footer__autor {
   margin: 0;
+  padding: 18px 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 25px;
@@ -339,24 +343,7 @@
 }
 
 .footer__social-icon {
-  background-repeat: no-repeat;
-  background-size: 16px 16px;
-  background-position: left center;
-}
-
-.footer__social-icon::before {
-  content: '';
-  margin-right: 26px;
-}
-
-.footer__social-icon_type_fb {
-  background-image: url(../images/facebook_color_white.svg);
-}
-
-.footer__social-icon_type_vk {
-  background-image: url(../images/vk_color_white.svg);
-}
-
-.footer__social-icon_type_inst {
-  background-image: url(../images/instagram_color_white.svg);
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
